[workspace]
resolver = "3"
members = ["cortex-m-edf-rtic", "rtic-edf-pass"]
exclude = ["benchmarks"]

[profile.dev]
opt-level = 0
debug = 2

[profile.release]
opt-level = 3
debug = 2
debug-assertions = false
lto = "fat"

[profile.debug-optimized]
inherits = "release"
debug-assertions = true

[patch.crates-io]
rtic-core = { git = "https://github.com/zakimadaoui/rtic-mc-experiments", branch = "main" }
