[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "critical-section-single-core",
    "inline-asm",
] }
cortex-m-rt = "0.7.5"
cortex-m-edf-rtic = { path = "../cortex-m-edf-rtic"}
rtic-edf-pass = { path = "../rtic-edf-pass", default-features = false, features = ["defmt", "benchmark"] }
benchmark-generator = { path = "benchmark-generator" }

defmt = "1.0.1"
defmt-rtt = "1.1.0"
fugit = { version = "0.3.7", features = ["defmt"] }
panic-probe = { version = "1.0.0", features = ["defmt", "print-defmt"] }

[dependencies.atsamd-hal]
version = "0.23.0"
default-features = false
features = ["samd51j-rt", "samd51j", "defmt"]

[[bin]]
name = "benchmark"
# required-features = ["rtic-edf-pass/defmt", "check-missed-deadlines"]
required-features = ["rtic-edf-pass/defmt"]

[[bin]]
name = "bench_oh"
# required-features = ["rtic-edf-pass/defmt", "check-missed-deadlines"]
required-features = ["rtic-edf-pass/defmt"]

[[bin]]
name = "hello"
# required-features = ["rtic-edf-pass/defmt", "check-missed-deadlines"]
required-features = ["rtic-edf-pass/defmt"]


[patch.crates-io]
rtic-core = { git = "https://github.com/zakimadaoui/rtic-mc-experiments", branch = "main" }

[profile.release]
debug = 2
lto = "fat"
opt-level = 3

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(bench_arrival_handler)", "cfg(bench_dispatcher_entry)", "cfg(bench_dispatcher_exit)"]
