[package]
name = "priority-queue"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = "1.2.0"
defmt = { version = "1.0", optional = true }
cortex-m = { version = "0.7.7", optional = true }

[dev-dependencies]
critical-section = { version = "1.2.0", features = ["std"] }

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[features]
std = ["critical-section/std"]
defmt = ["dep:defmt"]
benchmark = ["defmt", "dep:cortex-m"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(loom)'] }
