[package]
name = "rtic-edf-pass"
version = "0.1.0"
edition = "2024"

[dependencies]
heck = { version = "0.5.0", optional = true }
proc-macro2 = { version = "1.0.79", optional = true }
quote = { version = "1.0.35", optional = true }
syn = { version = "2.0.53", features = ["extra-traits", "full"], optional = true }
itertools = { version = "0.14.0", default-features = false }
rtic-core = { version = "0.1.0", optional = true }
heapless = { version = "0.9.1", features = ["portable-atomic"] }
defmt = { version = "1.0", optional = true }
cortex-m = "0.7.7"
fugit = "0.3.9"
critical-section = "1.2.0"

[dependencies.priority-queue]
version = "0.1"
path = "../priority-queue"

[features]
std = ["dep:heck", "dep:proc-macro2", "dep:quote", "dep:syn", "dep:rtic-core"]
# std enabled by default, disable this when you need to export no_std part
default = ["std"]

multibin = ["rtic-core/multibin"]
defmt = ["dep:defmt", "priority-queue/defmt"]
benchmark = ["defmt", "priority-queue/benchmark"]
check-missed-deadlines = []

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ["cfg(bench_dispatcher_exit_cs)", "cfg(bench_dispatcher_entry_cs)"]
