[package]
name = "benchmark-generator"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
itertools = "0.14.0"
phf = { version = "0.13.1", features = ["macros", "phf_macros"] }
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["extra-traits", "full"] }
